# hw

./: 2part_crud  Task  config.ini  main.py  main_ex.py  my_select_1.py  my_select_10 copy.py  my_select_10.py  my_select_11.py  my_select_11not.py  my_select_12.py  my_select_2.py  my_select_3.py  my_select_3222.py  my_select_4.py  my_select_5.py  my_select_6.py  my_select_7.py  my_select_8.py  my_select_8not.py  my_select_9.py  pyproject.toml  readme1  seed.py
migrations/: README  env.py
migrations/versions/: 69c1abf78a4c_init.py
