[tool.poetry]
name = "hw-2"
version = "0.1.0"
description = ""
authors = ["RostislavB74 <brn.h74@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.8"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
